--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev": "deno run -A --watch --unstable-kv main.ts",
-    "build": "deno run -A --watch --unstable-kv build"
+    "build": "deno run -A --unstable-kv main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
