--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-    "express": "npm:express@4.18.2"
+    "express": "npm:express@4.18.2",
+    "cors": "npm:cors@2.8.5"
   }
 }
